--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "fetch-mock": "^9.11.0",
     "sass": "^1.56.1",
     "vite": "^3.2.3"
   }
